testing/src/java7srclisting/errors/ErrorV6.java
package java7srclisting.errors;

public class ErrorV6 {

    private int a;

    @Override
    public String toString() {
        return super.toString();
    }

}
